# skincare_gpt

./: .gitignore  README.md  chat_ui.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml  sephora_product.sql  sephora_review.sql  test.py  test_convo.py  test_custom.py  test_langraph.py
app/: dependencies.py  main.py
app/agents/: chat.py  intent_classification.py
app/context/: manager.py
app/internal/: client.py  embedding.py  embedding_v2.py  postgres.py  qdrant.py  redis.py  web_search.py
app/lang_graphs/chat/: graph_state.py  main.py
app/lang_graphs/chat/handlers/: __init__.py  basic_questioinaire.py  chat_loop.py  intent_classification.py
app/lang_graphs/chat/memory/: thread_context.py
app/lang_graphs/chat/models/: basic_questioinaire.py
app/lang_graphs/chat_v1/: __init__.py  graph_state.py  main.py
app/lang_graphs/chat_v1/handlers/: __init__.py  basic_questioinaire.py  chat_loop.py  intent_classification.py  vector_search_rewrite_worker.py
app/lang_graphs/chat_v1/memory/: thread_context.py
app/memory/: postgres_memory.py
app/models/: __init__.py  qdrant.py  sephora.py
app/routes/: __init__.py  chat.py  products.py  reviews.py  semantic.py  semantics_v2.py  test.py
app/semantic_search/: __init__.py  general.py  products.py  reviews.py
app/semantic_search/v1/: __init__.py  products.py  reviews.py
app/semantic_search/v2/: __init__.py  general.py  products.py  reviews.py
convo_design/: design.md  graph.txt  scope.txt
data/.flatnotes/: _5_1.toc  _5_2.toc  _5_3.toc
dataV2/1_sql/: migrate_data.py  requirements.txt  sephora_product.sql  sephora_product_schema.sql  sephora_review.sql  sephora_review_schema.sql
dataV2/2_qdrant/: sql_to_qdrant.py
tests/: cmd.txt  test_intent_classification.py
(+33 files in other folders)
