[tool.poetry]
name = "skincare-gpt"
version = "0.1.0"
description = ""
authors = ["Stephen Chung <53108134+spchung@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.77.0"
psycopg2 = "^2.9.10"
pydantic = "^2.11.4"
qdrant-client = "^1.14.2"
sentence-transformers = "^4.1.0"
atomic-agents = "^1.1.2"
langchain-community = "^0.3.24"
ipython = "^9.2.0"
logfire = "^3.16.0"
langchain-qdrant = "^0.2.0"
langchain = "^0.3.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
